--- a/style.css
+++ b/style.css
@@ -113,8 +113,34 @@ h3{
        margin: 0;
 }
 
+/*first section*/
+.firstsection{
+       display: flex;
+       justify-content: space-around;
+       align-items: center;
+       /*margin: 80px 0;*/
+       background: #2F3061;
+}
+.firstsection > div{
+       width: 30%;
+       
+}
+.leftsection{
 
-
+       font-size: 2.5rem ;
+       color: #fff;
+      /* margin: 70px 0;*/
+}
+.rightsection img{
+      width: 80%;
+      margin: 50px 0;
+}
+.yellow{
+       color:yellow;
+}
+#element{
+       color:yellow;
+}
 
 
 
